# simple_nn_templated

./: .hgignore  CMakeLists.txt  README.md  main.cpp  mnist_loader.h  rnd_nn.h  sanitizer-thread-suppressions.txt  simple_nn.h
.hg/: dirstate  last-message.txt  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
.hg/store/data/: _c_make_lists.txt.i  _c_make_lists.txt.orig.i  cm__ctors.h.i  cust__iters.h.i  cust__iters.h.orig.i  main.cpp.i  main.cpp.orig.i  matrix2d.h.i  matrix2d.h.orig.i  mnist__loader.h.i  palign.h.i  rnd__nn.h.i  sanitizer-thread-suppressions.txt.i  simple__nn.h.i  simple__nn.h.orig.i  types__helpers.h.i  types__helpers.h.orig.i  ~2ehgignore.i
.hg/store/data/mnist__dataset/: mnist__readme.txt.i  mnist__test__10.csv.i  mnist__train__100.csv.i
.hg/wcache/: manifestfulltextcache
my_includes/: atomic_helpers.h  csv_reader.h  cust_iters.h  matrix2d.h  mymath.h  palign.h  runners.h  safe_queue.h  types_helpers.h
my_includes/.hg/: dirstate  last-message.txt  undo.backup.dirstate
my_includes/.hg/cache/: branch2-served  rbc-revs-v1
my_includes/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
my_includes/.hg/store/data/: atomic__helpers.h.i  csv__reader.h.i  cust__iters.h.i  matrix2d.h.i  mymath.h.i  palign.h.i  runners.h.i  safe__queue.h.i  types__helpers.h.i
my_includes/.hg/wcache/: manifestfulltextcache
